# oidadb

./: .gitignore  CMakeLists.txt  biz.org  edb.h  ellemdb.h  errors.c  errors.h  file-io.c  file.h  handle-sharedmem.c  handle.c  handle.h  host-jobs.c  host.c  host.h  jobs.c  jobs.h  locks.h  makefile  pages-types.h  pages.c  pages.h  readme.org  sharedmem.h  worker.c  worker.h
c.src/: analytics.h  edba-ent.c  edba-lookups.c  edba-objects.c  edba-page.c  edba-pagecreates.c  edba-struct.c  edba-util.h  edba.c  edba.h  edba_u.h  edbd-adddel.c  edbd-edbl.c  edbd-init.c  edbd.c  edbd.h  edbd_u.h  edbf-lookups.c  edbf-objects.c  edbf.h  edbh-ent.c  edbh-stk.c  edbh.c  edbh.h  edbh_u.h  edbl.c  edbl.h  edbp-types.h  edbp.c  edbp.h  edbp_u.h  edbs-jobs.c  edbs-jobs.h  edbs.c  edbs.h  edbs_u.h  edbw-ent.c  edbw-objs.c  edbw-struct.c  edbw-util.h  (+27 more)
c.src/include/: ellemdb.h  oidadb.h  telemetry.h
c.src/odbm/: error.h  main.c  primatives.h
c.src/odbm/dbfile/: dbfile.c
c.src/odbm/ents/: colors.h  column-shard.c  elements-column.c  elements-dialog.c  elements-edbd.c  elements-edbp.c  elements-host.c  elements-shards.c  elements.c  elements.h  elements_u.h  ents-terminal.c  ents.h  ents_u.h
c.src/odbm/glplotter/: glp_u.h  glplotter-buttons.h  glplotter-events.c  glplotter.h  options.h  primatives.h
c.src/odbm/gman/: arrow.c  background.c  column.c  debug.c  dialog-index.c  dialog.c  gman.c  gman.h  gman_u.h  opener.c  shard-descriptor.c  shard.c  terminal.c
c.src/odbm/gman/glplotter/: glplotter-draw.c  glplotter-events.c  glplotter-init.c  glplotter_u.h
c.src/odbm/gman/text/: text.c  text.h
c.src/tests/: 0-t_00_t.c  10-edbd_00_t.c  10-edbl_00_t.c  10-edbl_01_t.c  15-edbp_00_t.c  15-edbs_00_t.c  15-edbs_01_t.c  17-edba_00_t.c  17-edba_01_t.c  18-edbw_00_t.c  20-edbx_00_t.c  20-edbx_01_t.c  20-edbx_05_t.c  host_main.c  page_main.c  t0001_io.c  t0005_host.c  t0010_edbd.c  teststuff.h
c.src/tests/stupididea/: draw-dwg.c  draw-dwg.h  draw.c  draw.h  error.h  file.c  file.h  graphic-pagepanel.h  main.c  primatives.h  test  text.c  text.h  window.c  window.h
c.src/tests/stupididea/dbfile/: dbfile.c
c.src/tests/stupididea/ents/: background.c  background.h  colors.h  debug.c  debug.h  ents-background.c  ents-debug.c  ents-dialog.c  ents-opener.c  ents-page.c  ents-pager.c  ents.h  ents_u.h  terminal.c
c.src/tests/stupididea/glplotter/: error.c  glp_u.h  glplotter-draw.c  glplotter-events.c  glplotter.h  glpotter-init.c  options.h  primatives.h
c.src/utils/: index.c  odb-explorer.c  odb-explorer.h  page.c
go.src/: go.mod  main.go
go.src/gman/: shard.go
go.src/gman/glplotter/: draw.go  graphics.go
include/: ellemdb.h
include/oidadb/: blocks.h  buffers.h  common.h  config.h  errors.h  objects.h  oidadb.h  pages.h
include/oidadb-internal/: odbfile.h  options.h
liboidadb/: CMakeLists.txt  blocks.h  buffer-map.c  buffers.c  buffers.h  edba-objects.c  edba-page.c  edba-pagecreates.c  edba-struct.c  edba.h  edba_u.h  edbd-adddel.c  edbd-init.c  edbd.c  edbd.h  edbd_u.h  edbh-dyn.c  edbh-ent.c  edbh-stk.c  edbh.c  edbh.h  edbl.c  edbl.h  edbp.h  edbs-jobs.c  edbs-jobs.h  edbw-ent.c  edbw-objs.c  edbw.c  edbx.h  errors.c  errors.h  handle-sharedmem.c  makefile  meta.h  mmap.c  odb-structures.h  odbfile.c  odbspec.c  pages-blocks.c  (+5 more)
liboidadb-alpha/: config.c  edba-ent.c  edba-lookups.c  edba-pagecreates.c  edba.c  edba_u.h  edbd-edbl.c  edbh-ent.c  edbh-stk.c  edbh_u.h  edbp_u.h  edbs.c  edbs.h  edbs_u.h  edbx.c  errors.c  errors.h  handle-sharedmem.c  wrappers.h
liboidadb-alpha/test/: 0-t_00_t.c  10-edbd_00_t.c  10-edbl_01_t.c  15-edbs_00_t.c  15-edbs_02_t.c  17-edba_00_t.c  17-edba_01_t.c  20-edbx_01_t.c  CMakeLists.txt  makefile  teststuff.c  teststuff.h
liboidadb/blocks/: CMakeLists.txt  blocks.c  blocks.h  buffer-map.c  buffers.c  errors.c  errors.h  mmap.c  mmap.h  odbfile.c  pages-blocks.c  pages-meta.c
liboidadb/blocks/test/: 0-t_00_t.c  10-volume_00_t.c  10-volume_01_t.c  10-volume_02_t.c  CMakeLists.txt  makefile  teststuff.h
liboidadb/test/: 0-t_00_t.c  10-edbd_01_t.c  10-edbl_00_t.c  10-edbl_01_t.c  10-volume_00_t.c  10-volume_01_t.c  10-volume_02_t.c  15-edbp_00_t.c  15-edbs_01_t.c  15-edbs_02_t.c  17-edba_01_t.c  18-edbw_00_t.c  20-edbx_00_t.c  teststuff.c  teststuff.h
man/: 0orgsetup.org  blocks.org  buffers.org  clang.org  common-lang.org  database.org  elements.org  errors.org  handles.org  hardware.org  index.org  liboidadb.org  makefile  odb_buffer_new.org  odb_create.org  odb_creatparams_t.org  odb_elm_entities.org  odb_elm_events.org  odb_elm_jobs.org  odb_elm_structs.org  odb_errstr.org  odb_handle.org  odb_host.org  odb_hostconfig.org  odb_hostconfig_t.org  odb_hostpoll.org  odb_log.org  odb_open.org  odbb_bind_buffer.org  odbb_checkout.org  odbb_commit.org  odbb_seek.org  odbh.org  odbh_config.org  odbh_index.org  odbh_jent.org  odbh_job.org  odbh_job2.org  odbh_jobdesc_t.org  odbh_jobj.org  (+15 more)
odbm/: main.go
odbm/gman/: columns.go  debug.go
odbm/gman/glplotter/: glplotter-init.go  serve.go
odbm/odbm.c/: error.c  odbm.c  odbm.h
odbm/odbm.c/gman/: colors.h  dialog-index.c  dialog.c  dialog.h  dialog_u.h  gman.h  shard.c
odbm/odbm.c/gman/glplotter/: glplotter.h
odbm/odbm.c/gman/text/: text.h
odbm/primatives/: vector.go
odbs/: CMakeLists.txt  btree.c  cli.c  cli.h  index.c  makefile  objects.c  odbs.c  odbs.h  page.c
scripts/: doxyfile  ftp-publish.sh
spec/: agf.org  edb.org  edbs-jobs.org  locking.org  manual.org  namespaces.org  odb-core.org  odbv1.org  publish-index.m4.html  refs.org
spec/v0/: locking-testing.org
tests/: page_main.c
